profilelist1exp/unpackaged/objects/Customer_Engagement__c.object
<CustomObject>
    <description>BOLT &amp; GSL project</description>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive/PDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Account Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>US/CAN</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Team_Call_Date__c</fullName>
        <label>Account Team Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_End_Date__c</fullName>
        <inlineHelpText>Next best end date</inlineHelpText>
        <label>Alternate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Start_Date__c</fullName>
        <inlineHelpText>Next best start date</inlineHelpText>
        <label>Alternate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Answer1__c</fullName>
        <label>Answer1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer2__c</fullName>
        <label>Answer2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer3__c</fullName>
        <label>Answer3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Desc__c</fullName>
        <formula>Primary_Account__r.Sales_Channel__r.Area_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSMB</fullName>
                </value>
                <value>
                    <fullName>LE</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Briefing_Tier__c</fullName>
        <description>US3034839</description>
        <label>Briefing Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CE_Email_Recipient__c</fullName>
        <label>CE Email Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Calendar_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar Management Record</label>
        <referenceTo>Calendar_Management__c</referenceTo>
        <relationshipLabel>Customer Engagements (Calendar Management) - RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Customer Engagements – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Request__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Cancel Request</fullName>
                    <default>true</default>
                    <label>Cancel Request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Cancel_Reason__c</fullName>
        <label>Change/Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Cancel_Request_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to be checked if the Change/Cancel button is clicked when the CE record is already submitted and Satus &quot;not equal to&quot; COMPLETED, CANCELLED  through code</description>
        <label>Change/Cancel Request Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date__c</fullName>
        <description>DSC Confirmed Date</description>
        <label>Confirmed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_End_Date__c</fullName>
        <label>Confirmed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_on_Account_Plan__c</fullName>
        <label>Content on Account Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Extremely Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <inlineHelpText>16 Characters Required for this Field.  No Spaces.

Format:  XXXX-XXXX-XXXXXX</inlineHelpText>
        <label>Cost Center</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Background_Challenge__c</fullName>
        <label>Customer Background &amp; Challenge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Background__c</fullName>
        <label>Customer Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Care Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite Customer</fullName>
                </value>
                <value>
                    <fullName>Remote Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSC_SA_Customer_Challenge__c</fullName>
        <label>SA: Customer Challenge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSC_SA_Engagement_Feedback__c</fullName>
        <label>SA: Engagement Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSC_SA_What_we_did_and_Why__c</fullName>
        <label>SA: What we did and Why</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dell_Solution_Center_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Solution Center names:
Americas: Austin, Chicago, New York, Sao Paulo, Santa Clara, Washington D.C.
APJ: Shanghai, Singapore, Sydney, Tokyo
EMEA: Bracknell, Frankfurt, Limerick, Paris
For more information please go to http://dsc.dell.com</inlineHelpText>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Engagement_Type__c</field>
                <operation>equals</operation>
                <value>DSC</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Customer Engagements (Dell Solution Center Site) – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_of_Proposed_Solution__c</fullName>
        <label>Description of Proposed Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_DateF__c</fullName>
        <formula>Calendar_Management__r.End_Date__c</formula>
        <label>Confirmed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Delivery__c</fullName>
        <label>Engagement Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Face to face</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Web Conference</fullName>
                </value>
                <value>
                    <fullName>Video Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_on_Customer_Call__c</fullName>
        <label>Engagement on Customer Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Extremely Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_on_Presenter_Call__c</fullName>
        <label>Engagement on Presenter Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Extremely Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_no_of_Customer_Attendees__c</fullName>
        <label>Estimated no. of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-standard</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Start_Date_Changed_To__c</fullName>
        <label>Changed Event Start Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>SoW Delivered</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>Executed by EMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_TypeF__c</fullName>
        <formula>Calendar_Management__r.Event_Record_type__c</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_Changed_To__c</fullName>
        <label>Changed Event Type To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Briefing</fullName>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>Architectural Design Session</fullName>
                </value>
                <value>
                    <fullName>Proof of Concept</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Analyst Events</fullName>
                </value>
                <value>
                    <fullName>Field Briefing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Type of Customer Engagement event</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Briefing</fullName>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>Architectural Design Session</fullName>
                </value>
                <value>
                    <fullName>Proof of Concept</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Analyst Events</fullName>
                </value>
                <value>
                    <fullName>Field Briefing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Explanation__c</fullName>
        <label>Further Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GSL_End_Date__c</fullName>
        <label>Preferred End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSL_Objective__c</fullName>
        <label>Objective for Proof of Concept</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GSL_Requested_End_Date__c</fullName>
        <label>Requested End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSL_Requested_Start_Date__c</fullName>
        <label>Requested Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSL_Start_Date__c</fullName>
        <inlineHelpText>This date is not guaranteed. Date of visit will be agreed with DSC team during the evaluation process, depending on availability of all resources to meet your requirements.</inlineHelpText>
        <label>Preferred Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Half_Day__c</fullName>
        <formula>TEXT(Calendar_Management__r.Half_Day__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Day?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Customer_Attendee__c</fullName>
        <label>Highest Customer Attendee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CXO</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Manager and below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Base</label>
        <referenceTo>Install_Base__c</referenceTo>
        <relationshipLabel>Customer Engagements – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;AFTER you fill out Customer Engagement DETAILS and hit save… YOU MUST add at least one TOPIC and HIT SUBMIT TO FINISH YOUR REQUEST&quot;</defaultValue>
        <label>&lt;font color=&quot;#FF0000&quot;&gt; ACTION REQUIRED:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge_of_Account__c</fullName>
        <label>Knowledge of Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Extremely Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Architect_Email__c</fullName>
        <description>lead architect email populated by workflow FU</description>
        <label>Lead Architect Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Architect_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Architect Id</label>
        <referenceTo>Topic_Experts__c</referenceTo>
        <relationshipLabel>Customer Engagements (Lead Architect) - RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Architect_Name__c</fullName>
        <formula>Lead_Architect_Id__r.Topic_Expert_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Architect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_Number__c</fullName>
        <label>NDA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <inlineHelpText>Specify if the Customer NDA is available. 

It is the account team’s responsibility to ensure the customer’s NDA is in place prior to their visit.</inlineHelpText>
        <label>NDA?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Attendees__c</fullName>
        <description>No. of Attendees in this CE</description>
        <label>No. of Attendees</label>
        <summaryForeignKey>Attendees__c.Customer_Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Attending_Companies__c</fullName>
        <description>for dashboard</description>
        <label>No. of Attending Companies</label>
        <summaryForeignKey>Attending_Accounts__c.Customer_Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <label>No. of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_of_Visit__c</fullName>
        <label>Objective of Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Engagement__c</fullName>
        <inlineHelpText>Overall Engagement including ability to reach / responsiveness</inlineHelpText>
        <label>Overall Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Extremely Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participation_on_Account_Call__c</fullName>
        <label>Participation on Account Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Extremely Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PleaseNote1__c</fullName>
        <defaultValue>&quot;To ensure we can deliver your engagement ASAP, we need some additional information. Please hit SAVE then add your Attendees, Topics and Opportunities in the following sections of this form.&quot;</defaultValue>
        <label>&lt;font color=&quot;#FF0000&quot;&gt; PLEASE NOTE:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PleaseNote__c</fullName>
        <defaultValue>&quot;Please fill out Customer Engagement details and hit SAVE. Finish your request by adding Attendees ,Topics and Related Opportunities.&quot;</defaultValue>
        <label>&lt;font color=&quot;#FF0000&quot;&gt; PLEASE NOTE:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_for_case_study__c</fullName>
        <inlineHelpText>Do you think your customer would be willing to be a reference or create a case study post the POC?</inlineHelpText>
        <label>Is there potential for a case study?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_call_date__c</fullName>
        <label>Presenter call date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presenter_call_scheduled__c</fullName>
        <label>Presenter call scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Engagements (Primary Account) - RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Calendar_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Calendar Record</label>
        <referenceTo>Calendar_Management__c</referenceTo>
        <relationshipLabel>Customer Engagements – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Attending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact Attending?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Primary_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Engagements (Primary Contact) – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Workspace_URL__c</fullName>
        <description>link to Project workspace</description>
        <inlineHelpText>The URL of PoC project workspace</inlineHelpText>
        <label>Project Workspace URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <label>Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <label>Question 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Above_Answer__c</fullName>
        <label>Reason for Above Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Could not get commitment from customer</fullName>
                </value>
                <value>
                    <fullName>Date Changed, new date not known</fullName>
                </value>
                <value>
                    <fullName>Budget Cuts/Travel Restrictions</fullName>
                </value>
                <value>
                    <fullName>Appropriate customers or Dell participants unavailable</fullName>
                </value>
                <value>
                    <fullName>Customer Emergency</fullName>
                </value>
                <value>
                    <fullName>Duplicate request</fullName>
                </value>
                <value>
                    <fullName>AE decided to host outside the EBC/DSC</fullName>
                </value>
                <value>
                    <fullName>Incomplete Information Submitted</fullName>
                </value>
                <value>
                    <fullName>Analyst canceled due to no show to calls</fullName>
                </value>
                <value>
                    <fullName>On Waiting List, could not get moved into the center</fullName>
                </value>
                <value>
                    <fullName>Canceled Before Submitting</fullName>
                </value>
                <value>
                    <fullName>Center not available in required timeframe</fullName>
                </value>
                <value>
                    <fullName>Associated opportunity won/lost, engagement no longer requirement</fullName>
                </value>
                <value>
                    <fullName>DSC cannot provide required technical resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons_for_dates__c</fullName>
        <label>Reasons for dates</label>
        <type>TextArea</type>
    </fields>
</CustomObject>